                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2020-11-19
 * Expose ip_address field to describe() method which can be useful to lock some requests to specific IP addresses.

2020-11-18
 * Older browsers don't support the ||= operator, so removing it from wing.vue.js.
 * Enabled decade buttons on the luxon date time picker.

2020-11-17
 * Added format_date(), format_timeago(), date2luxon() in wing.vue.js.
 * Depricated the datetime and timeago filters in wing.vue.js.
 * Added the <luxon-date-time> component in wing.vue.js.
 * Depricated the <date-time> component in wing.vue.js.

2020-11-15
 * Emit change event for wing-select and wing-select-new components in wing.vue.js.
 * Some bug fixes in wing class --add and --template templates.

2020-11-11
 * Handle warnings even when properties are directly injected into a wing object in wing.vue.js.
 * Fix: wing.vue.js displays the Add a Comment form, even if the user isn't logged in. #32

2020-11-09
 * Removed "Last Login" from profile template since that is hidden info.
 * Made long URLs in comments wrap so they don't make weird scroll bars.

2020-11-06
 * Changed the save and preview button on the markdown editor to make it easier to see and easier to use.

2020-10-27
 * Default value in Wing::DB::Result is now set by set_column() rather than calling the column_name() accessor, for both performance and so that dynamically generated options validation doesn't get called prematurely when the object has no data.

2020-10-24
 * Remove autosave on markdown editor.

2020-10-22
 * Fix bug in wing.vue.js date-time component.

2020-10-19
 * Fixed a bug where wing.vue.js wing.object.save() wouldn't save if the value was 0.
 * Fixed a bug that prevents objects from being recycled by resetting the fetch_api.
